--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<header>
+	<header class="clearfix">
 		<h1>Why Not Go</h1>
 		<nav>
 			<a href="#">Africa</a>
@@ -19,28 +19,28 @@
 		</nav>
 	</header>
 	<main>
-		<div class="Africa">
-			<p><h2>Africa</h2></p>
+		<div class="Africa homeblock">	
+			<h2>Africa</h2>
 		</div>
 		
-		<div class="Asia">
-			<p><h2>Asia</h2></p>
+		<div class="Asia homeblock">
+			<h2>Asia</h2>
 		</div>
 			
-		<div class="Australia">
-			<p><h2>Australia</h2></p>
+		<div class="Australia homeblock">
+			<h2>Australia</h2>
 		</div>
 		
-		<div class="Europe">
-			<p><h2>Europe</h2></p>
+		<div class="Europe homeblock">
+			<h2>Europe</h2>
 		</div>
 				
-		<div class="NorthAmerica">
-			<p><h2>North America</h2></p>
+		<div class="NorthAmerica homeblock">
+			<h2>North America</h2>
 		</div>
 		
-		<div class="SouthAmerica">
-			<p><h2>South America</h2></p>
+		<div class="SouthAmerica homeblock">
+			<h2>South America</h2>
 		</div>
 			
 	</main>
