--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 	<title>Why Not Go</title>
 	<link href="https://fonts.googleapis.com/css?family=Teko:400,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	
+
 </head>
 <body>
 	<header class="clearfix">
 		<h1>Why Not Go</h1>
 		<nav>
-			<a href="#">Africa</a>
+			<a href="africa.html">Africa</a>
 			<a href="#">Asia</a>
 			<a href="#">Australia</a>
 			<a href="#">Europe</a>
@@ -20,7 +22,7 @@
 	</header>
 	<main>
 		<div class="Africa homeblock">	
-			<h2>Africa</h2>
+			<h2><a href="africa.html">Africa</a></h2>
 		</div>
 		
 		<div class="Asia homeblock">
@@ -44,4 +46,5 @@
 		</div>
 			
 	</main>
+
 </body>
