--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head> 
 	<meta charset="utf-8">
-	<title>Why Not Go</title>
+	<title>My Travels</title>
 	<link href="https://fonts.googleapis.com/css?family=Teko:400,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	
@@ -10,14 +10,14 @@
 </head>
 <body>
 	<header class="clearfix">
-		<h1>Why Not Go</h1>
+		<h1><a href="index.html">My Travels</a></h1>
 		<nav>
-			<a href="africa.html">Africa</a>
-			<a href="#">Asia</a>
-			<a href="#">Australia</a>
-			<a href="#">Europe</a>
-			<a href="#">Noth America</a>
-			<a href="#">South America</a>
+			<a href="africa.html">Africa |</a>
+			<a href="asia.html">Asia |</a>
+			<a href="australia.html">Australia |</a>
+			<a href="#">Europe |</a>
+			<a href="northamerica.html">Noth America |</a>
+			<a href="southamerica.html">South America</a>
 		</nav>
 	</header>
 	<main>
@@ -26,11 +26,11 @@
 		</div>
 		
 		<div class="Asia homeblock">
-			<h2>Asia</h2>
+			<h2><a href="asia.html">Asia</a></h2>
 		</div>
 			
 		<div class="Australia homeblock">
-			<h2>Australia</h2>
+			<h2><a href="australia.html">Australia</a></h2>
 		</div>
 		
 		<div class="Europe homeblock">
@@ -38,13 +38,16 @@
 		</div>
 				
 		<div class="NorthAmerica homeblock">
-			<h2>North America</h2>
+			<h2><a href="northamerica.html">North America</a></h2>
 		</div>
 		
 		<div class="SouthAmerica homeblock">
-			<h2>South America</h2>
+			<h2><a href="southamerica.html">South America</a></h2>
 		</div>
 			
 	</main>
-
+<footer id="footer">
+	<p>© Metz Media 2019</p>
+</footer>
 </body>
+</html>
