--- a/Africa.html
+++ b/Africa.html
@@ -3,117 +3,39 @@
 <head> 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Why Not Go - Africa </title>
+	<title>My Travels - Africa </title>
 	<link href="https://fonts.googleapis.com/css?family=Teko:400,700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/vendor/jquery.fancybox.min.css">
 </head>
 <body>
 	<header class="clearfix">
-		<h1>Why Not Go</h1>
+		<h1><a href="index.html">My Travels</a></h1>
 		<nav>
-			<a href="#">Africa</a>
-			<a href="#">Asia</a>
-			<a href="#">Australia</a>
-			<a href="#">Europe</a>
-			<a href="#">Noth America</a>
-			<a href="#">South America</a>
+			<a href="africa.html">Africa |</a>
+			<a href="asia.html">Asia |</a>
+			<a href="australia.html">Australia |</a>
+			<a href="#">Europe |</a>
+			<a href="northamerica.html">Noth America |</a>
+			<a href="southamerica.html">South America</a>
 		</nav>
 	</header>
-	<!-- Images used to open the lightbox -->
-<div class="row">
-  <div class="column">
-    <img src="/Users/danielmetz/Desktop/FEWD19/djmetz6.github.io/images/Africa/Egypt1.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img src="/Users/danielmetz/Desktop/FEWD19/djmetz6.github.io/images/Africa/Egypt2.jpg" onclick="openModal();currentSlide(2)" class="hover-shadow">
-  </div>
-  <div class="column">
-    <img src="/Users/danielmetz/Desktop/FEWD19/djmetz6.github.io/images/Africa/Egypt3.jpg" onclick="openModal();currentSlide(3)" class="hover-shadow">
-  </div>
- 
-<!-- The Modal/Lightbox -->
-<div id="myModal" class="modal">
-  <span class="close cursor" onclick="closeModal()">&times;</span>
-  <div class="modal-content">
+	<p class="imglist" style="max-width: 1000px;">
+		<a href="images/Africa/Egypt1.jpg" data-fancybox="images" data-caption="Pyramid and Sphinx">
+		<img src="images/Africa/Egypt1-thumb.jpg" alt="Pyramid and Sphinx" /></a>
+		
+		<a href="images/Africa/Egypt2.jpg" data-fancybox="images" data-caption="Luxor Temple">
+		<img src="images/Africa/Egypt2-thumb.jpg" alt="Luxor Temple" /></a>
+		
+		<a href="images/Africa/Egypt3.jpg" data-fancybox="images" data-caption="Red Sea">
+		<img src="images/Africa/Egypt3-thumb.jpg" alt="Red Sea" /></a>
+	</p>
 
-    <div class="mySlides">
-      <div class="numbertext">1 / 3</div>
-      <img src="/Users/danielmetz/Desktop/FEWD19/djmetz6.github.io/images/Africa/Egypt1.jpg" style="width:100%">
-    </div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="js/vendor/jquery.fancybox.min.js"></script>
 
-    <div class="mySlides">
-      <div class="numbertext">2 / 3</div>
-      <img src="/Users/danielmetz/Desktop/FEWD19/djmetz6.github.io/images/Africa/Egypt2.jpg" style="width:100%">
-    </div>
-
-    <div class="mySlides">
-      <div class="numbertext">3 / 3</div>
-      <img src="/Users/danielmetz/Desktop/FEWD19/djmetz6.github.io/images/Africa/Egypt3.jpg" style="width:100%">
-    </div>
-
-    <!-- Next/previous controls -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
-
-    <!-- Caption text -->
-    <div class="caption-container">
-      <p id="caption"></p>
-    </div>
-
-    <!-- Thumbnail image controls -->
-    <div class="column">
-      <img class="demo" src="/Users/danielmetz/Desktop/FEWD19/djmetz6.github.io/images/Africa/Egypt1.jpg" onclick="currentSlide(1)" alt="Great Pyramid and Sphinx">
-    </div>
-
-    <div class="column">
-      <img class="demo" src="/Users/danielmetz/Desktop/FEWD19/djmetz6.github.io/images/Africa/Egypt2.jpg" onclick="currentSlide(2)" alt="Luxor Temple">
-    </div>
-
-    <div class="column">
-      <img class="demo" src="/Users/danielmetz/Desktop/FEWD19/djmetz6.github.io/images/Africa/Egypt3.jpg" onclick="currentSlide(3)" alt="Red Sea">
-    </div>
-  </div>
-</div>
-<script>
-// Open the Modal
-function openModal() {
-  document.getElementById("myModal").style.display = "block";
-}
-
-// Close the Modal
-function closeModal() {
-  document.getElementById("myModal").style.display = "none";
-}
-
-var slideIndex = 1;
-showSlides(slideIndex);
-
-// Next/previous controls
-function plusSlides(n) {
-  showSlides(slideIndex += n);
-}
-
-// Thumbnail image controls
-function currentSlide(n) {
-  showSlides(slideIndex = n);
-}
-
-function showSlides(n) {
-  var i;
-  var slides = document.getElementsByClassName("mySlides");
-  var dots = document.getElementsByClassName("demo");
-  var captionText = document.getElementById("caption");
-  if (n > slides.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = slides.length}
-  for (i = 0; i < slides.length; i++) {
-    slides[i].style.display = "none";
-  }
-  for (i = 0; i < dots.length; i++) {
-    dots[i].className = dots[i].className.replace(" active", "");
-  }
-  slides[slideIndex-1].style.display = "block";
-  dots[slideIndex-1].className += " active";
-  captionText.innerHTML = dots[slideIndex-1].alt;
-}
-</script>
+<footer id="footer">
+	<p>© Metz Media 2019</p>
+</footer>
 </body>
+</html>
