--- a/Africa.html
+++ b/Africa.html
@@ -12,11 +12,11 @@
 	<header class="clearfix">
 		<h1><a href="index.html">My Travels</a></h1>
 		<nav>
-			<a href="africa.html">Africa |</a>
-			<a href="asia.html">Asia |</a>
-			<a href="australia.html">Australia |</a>
-			<a href="#">Europe |</a>
-			<a href="northamerica.html">Noth America |</a>
+			<a href="africa.html">Africa </a>|
+			<a href="asia.html">Asia </a>|
+			<a href="australia.html">Australia </a>|
+			<a href="#">Europe </a>|
+			<a href="northamerica.html">Noth America </a>|
 			<a href="southamerica.html">South America</a>
 		</nav>
 	</header>
